[package]
name = "imposter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
git2 = "0.20.4"
notify = "8.2.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.44.0", features = ["full"] }
toml = "1.1.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
